tests/unit/default/syntax-error/036-create-table-parens-name-colon-type-params-null-eq.x.t
---- IN ----
+%table(id:decimal(10,2)?=|
---- OUT ----
---- ERR ----
syntax: expected <value> after `...e(id:decimal(10,2)?=` near `|` at position 26 - at line 1
---- EXIT ----
1
